==> AerospaceNU/stm32-avionics/platformio_projects/lib/new_hal/arduino_hardware_manager.cpp <==
#include "arduino_hardware_manager.h"
#include <fstream>
#include "board_config_common.h"
#include "circular_buffer.h"
#include "device_manager.h"
#include "hardware_manager.h"
#define USB_SERIAL_BUFFER_SIZE 500

void hm_hardwareInit() {
  pinMode(LED_BUILTIN, OUTPUT);
  cb_init(&serialCircularBuffer, serialBuffer, USB_SERIAL_BUFFER_SIZE,
          sizeof(uint8_t));

  deviceManager.init();

  if (deviceManager.getBarometer(0)) {
    hardwareStatusBarometer[0] =
        deviceManager.getBarometer(0)->getSensorStatus();
  }

  if (deviceManager.getGps(0)) {
    hardwareStatusGps[0] = deviceManager.getGps(0)->getSensorStatus();
  }

  // TODO: Maybe this can be better?
  if (deviceManager.getAccelerometer(0)) {
    hardwareStatusImu[0] = deviceManager.getAccelerometer(0)->getSensorStatus();
    sensorProperties.imuAccelFs[0] =
        deviceManager.getAccelerometer(0)->getAccelerometerFullScale();
  }

  if (deviceManager.getMagnetometer(0)) {
    hardwareStatusMag[0] = deviceManager.getMagnetometer(0)->getSensorStatus();
  }

  if (deviceManager.getNumberBatteryMonitorAdcs() > 0) {
    hardwareStatusVbat[0] = true;
  }

  hardwareStatusUsb[0] = true;
  hardwareStatusLed[0] = true;
}

void hm_ledToggle(int ledId) {
  digitalWrite(LED_BUILTIN, led_on);
  led_on = !led_on;
}

bool hm_radioSend(int radioNum, uint8_t *data, uint16_t numBytes) {
  if (deviceManager.getRadio(0)) {
    return deviceManager.getRadio(0)->sendData(data, numBytes);
  }

  return false;
}

void hm_radioUpdate() {
  for (auto &radio : deviceManager.radios) {
    if (radio->isDataAvailable()) {
      static RadioRecievedPacket_s packet;
      packet.radioId = 0;
      packet.rssi = radio->getLastRssi();
      packet.crc = true;
      packet.lqi = 0;

      memset(packet.data, 0, sizeof(packet.data));

      uint8_t len = sizeof(packet.data);
      radio->readData(packet.data, len);

      cb_enqueue(radioCircularBuffer, (unknownPtr_t)&packet);
    }
  }
}

void hm_readSensorData() {
  // Read from serial port
  while (Serial.available()) {
    uint8_t data_byte = Serial.read();
    cb_enqueue(&serialCircularBuffer, &data_byte);
  }

  // Read sensors
  deviceManager.readSensors();

  // Get data from barometer
  if (deviceManager.getBarometer(0)) {
    auto barometer = deviceManager.getBarometer(0);

    BarometerData_s baro_data;
    baro_data.pressureAtm = barometer->getPressureAtm();
    baro_data.temperatureC = barometer->getTemperatureC();
    sensorData.barometerData[0] = baro_data;
  }

  // Get data from GPS
  if (deviceManager.getGps(0)) {
    auto gps = deviceManager.getGps(0);
    sensorData.gpsData[0] = *gps->getLastFix();
  }

  // Get data from Gyro and Accelerometer
  if (deviceManager.getAccelerometer(0) && deviceManager.getGyroscope(0)) {
    auto accel = deviceManager.getAccelerometer(0);
    auto gyro = deviceManager.getGyroscope(0);

    ImuData_s imu_data;
    stdArrayToAxis3d(&(imu_data.accelRealMps2), accel->getAccelerometerData());
    stdArrayToAxis3d(&(imu_data.angVelRealRadps), gyro->getGyroscopeData());
    sensorData.imuData[0] = imu_data;
  }

  // Get data from magnetometer
  if (deviceManager.getMagnetometer(0)) {
    auto mag = deviceManager.getMagnetometer(0);

    MagData_s mag_data;
    stdArrayToAxis3d(&mag_data.realGauss, mag->getMagnetometerData());
    sensorData.magData[0] = mag_data;
  }

  // Read battery monitor ADCs
  for (uint i = 0; i < deviceManager.getNumberBatteryMonitorAdcs(); i++) {
    sensorData.vbatData[FIRST_ID_VBAT_ADC + i] =
        deviceManager.readBatteryVoltage(i);
  }

  // Set data timestamp
  sensorData.timestampMs = hm_millis();
}
