==> AerospaceNU/stm32-avionics/system/hardware_manager.c <==
#include "hardware_manager.h"
#include "hal_callbacks.h"
#include "radio_packet_types.h"
#include "accel_h3lis331dl.h"
#include "barometer_ms5607.h"
#include "ble_chip_nrf.h"
#include "ble_client_std.h"
#include "buzzer_pwm.h"
#include "dc_motor_pwm.h"
#include "flash_s25flx.h"
#include "gps.h"
#include "imu_lsm9ds1.h"
#include "line_cutter_ble.h"
#include "pyro_digital.h"
#include "led.h"
#include "ti_radio.h"
#include "radioconfig/smartrf_cc1200_cfg_434_38_4kbps.h"
#include "radioconfig/smartrf_cc1200_cfg_915_38_4kbps.h"
#include "radioconfig/smartrf_cc1120_cfg_434_38_4kbps.h"
#include "servo_pwm.h"
#include "usb_std.h"
#include "vbat_ina226.h"
#include "adc_device.h"

void hm_hardwareInit() {
  /* Accelerometers */
#if HAS_DEV(ACCEL_H3LIS331DL)
  for (int i = 0; i < NUM_ACCEL_H3LIS331DL; i++) {
    SpiCtrl_t accelH3lis331dlSpi = {accelH3lis331dlHspi[i],
                                    accelH3lis331dlCsGpioPort[i],
                                    accelH3lis331dlCsPin[i]};
    hardwareStatusAccel[FIRST_ID_ACCEL_H3LIS331DL + i] =
        accelH3lis331dl_init(&accelH3lis331dl[i], accelH3lis331dlSpi);
    sensorProperties.accelFs[FIRST_ID_ACCEL_H3LIS331DL + i] =
        981;  // 100G * 9.81 m/s^2
  }
#endif  // HAS_DEV(ACCEL_H3LIS331DL)

  /* Barometers */
#if HAS_DEV(BAROMETER_MS5607)
  for (int i = 0; i < NUM_BAROMETER_MS5607; i++) {
    hardwareStatusBarometer[FIRST_ID_BAROMETER_MS5607 + i] =
        barometerMs5607_init(&barometerMs5607[i], barometerMs5607Hspi[i],
                             barometerMs5607CsGpioPort[i],
                             barometerMs5607CsPin[i]);
  }
#endif  // HAS_DEV(BAROMETER_MS5607)

  /* BLE Chips */
#if HAS_DEV(BLE_CHIP_NRF)
  for (int i = 0; i < NUM_BLE_CHIP_NRF; i++) {
    bleChipNrf_init(&bleChipNrf[i], bleChipNrfHuart[i]);
    hardwareStatusBleChip[FIRST_ID_BLE_CHIP_NRF + i] = true;
  }
#endif  // HAS_DEV(BLE_CHIP)

  /* BLE Clients */
#if HAS_DEV(BLE_CLIENT_STD)
  // Register each client with the 1 chip (1 chip should be enforced by config)
  for (int i = 0; i < NUM_BLE_CLIENT_STD; i++) {
#if HAS_DEV(BLE_CHIP_NRF)
    bleClientStd_init(&bleClientStd[i], (BleChip_s *)(&bleChipNrf[0]),
                      bleClientStdAddress[i]);
#endif  // HAS_DEV(BLE_CHIP_NRF)
    hardwareStatusBleClient[FIRST_ID_BLE_CLIENT_STD + i] = true;
  }
#endif  // HAS_DEV(BLE_CLIENT_STD)

  /* Buzzers */
#if HAS_DEV(BUZZER_PWM)
  for (int i = 0; i < NUM_BUZZER_PWM; i++) {
    buzzerPwm_init(&buzzerPwm[i], buzzerPwmHtim[i], buzzerPwmChannel[i], 500);
    hardwareStatusBuzzer[FIRST_ID_BUZZER_PWM + i] = true;
  }
#endif  // HAS_DEV(BUZZER_PWM)

  /* DC Motors */
#if HAS_DEV(DC_MOTOR_PWM)
  for (int i = 0; i < NUM_DC_MOTOR_PWM; i++) {
    dcMotorPwm_init(&dcMotorPwm[i], dcMotorPwmHtim[i], dcMotorPwmChannel[i]);
    hardwareStatusDcMotor[FIRST_ID_DC_MOTOR_PWM + i] = true;
  }
#endif  // HAS_DEV(DC_MOTOR_PWM)

  /* Flash */
#if HAS_DEV(FLASH_S25FLX)
  for (int i = 0; i < NUM_FLASH_S25FLX; i++) {
    flashS25flx_init(&(flashS25flx[i]), flashS25flxHspi[i],
                     flashS25flxCsGpioPort[i], flashS25flxCsPin[i],
                     kFlashSizeBytes[i]);
    hardwareStatusFlash[FIRST_ID_FLASH_S25FLX + i] = true;
  }
#endif  // HAS_DEV(FLASH_S25FLX)

  /* GPS */
#if HAS_DEV(GPS_STD) || HAS_DEV(GPS_UBLOX)
  for (int i = 0; i < NUM_GPS_STD + NUM_GPS_UBLOX; i++) {
    gps_init(&gps[i], gpsStdHuart[i],
             IS_DEVICE(i, GPS_STD) ? GPS_TYPE_STD : GPS_TYPE_UBLOX);
    hardwareStatusGps[FIRST_ID_GPS_STD + i] = true;
  }
#endif  // HAS_DEV(GPS_STD) || HAS_DEV(GPS_UBLOX)

  /* IMUs */
#if HAS_DEV(IMU_LSM9DS1)
  for (int i = 0; i < NUM_IMU_LSM9DS1; i++) {
    imuLsm9ds1[i].ag.lsm9ds1Spi.hspi = imuLsm9ds1AgHspi[i];
    imuLsm9ds1[i].ag.lsm9ds1Spi.port = imuLsm9ds1AgCsGpioPort[i];
    imuLsm9ds1[i].ag.lsm9ds1Spi.pin = imuLsm9ds1AgCsPin[i];
    imuLsm9ds1[i].m.lsm9ds1Spi.hspi = imuLsm9ds1MagHspi[i];
    imuLsm9ds1[i].m.lsm9ds1Spi.port = imuLsm9ds1MagCsGpioPort[i];
    imuLsm9ds1[i].m.lsm9ds1Spi.pin = imuLsm9ds1MagCsPin[i];
    imuLsm9ds1[i].ag.aFs = FS_XL_16;
    imuLsm9ds1[i].ag.gFs = FS_G_2000;
    imuLsm9ds1[i].m.mFs = FS_M_8;
    lsm9ds1_init(&imuLsm9ds1[i]);
    hardwareStatusImu[FIRST_ID_IMU_LSM9DS1 + i] = true;
    sensorProperties.imuAccelFs[FIRST_ID_IMU_LSM9DS1 + i] =
        156.96;  // 16 G * 9.81 mps2/G
  }
#endif  // HAS_DEV(IMU_LSM9DS1)

  /* LEDs */
#if HAS_DEV(LED_DIGITAL)
  for (int i = 0; i < NUM_LED_DIGITAL; i++) {
    ledDigital[i].port = ledDigitalGpioPort[i];
    ledDigital[i].pin = ledDigitalPin[i];
    led_init(&ledDigital[i]);
    hardwareStatusLed[FIRST_ID_LED_DIGITAL + i] = true;
  }
#endif  // HAS_DEV(LED_DIGITAL)

  /* Pyros */
#if HAS_DEV(PYRO_DIGITAL)
  for (int i = 0; i < NUM_PYRO_DIGITAL; i++) {
    pyroDigital[i].port = pyroDigitalGpioPort[i];
    pyroDigital[i].pin = pyroDigitalPin[i];
    pyroDigital_init(&pyroDigital[i]);
    hardwareStatusPyro[FIRST_ID_PYRO_DIGITAL + i] = true;
  }
  halCallbacks_registerTimPeriodElapsedCallback(pyroDigitalTickTim,
                                                hm_pyroUpdate, NULL);
  HAL_TIM_Base_Start_IT(pyroDigitalTickTim);
#endif  // HAS_DEV(PYRO_DIGITAL)

  /* Line Cutters */
#if HAS_DEV(LINE_CUTTER_BLE)
  for (int i = 0; i < NUM_LINE_CUTTER_BLE; i++) {
    // Register each BLE line cutter with the 1 chip (1 chip should be enforced
    // by config)
#if HAS_DEV(BLE_CHIP_NRF)
    lineCutterBle_init(&lineCutterBle[i], (BleChip_s *)(&bleChipNrf[0]),
                       lineCutterBleAddress[i]);
    hardwareStatusLineCutter[FIRST_ID_LINE_CUTTER_BLE + i] = true;
#endif  // HAS_DEV(BLE_CHIP_NRF)
  }
#endif  // HAS_DEV(LINE_CUTTER_BLE)

  /* Pyro continuity */
#if HAS_DEV(PYRO_CONT_ADC)
  // Pyros - 0 min, (127k/27k*3.3V) max
  // I had to multiply by 10/3 on my V0 to get these to make sense. TODO
  // Why???
  double voltageDividerMax = 3.3 * (127.0 / 27.0) * 10 / 3;
  for (int i = 0; i < NUM_PYRO_CONT_ADC; i++) {
    adcDev_init(&pyroContAdc[i], pyroContAdcHadc[i], pyroContAdcRank[i], 0,
                voltageDividerMax, true);
    hardwareStatusPyroCont[FIRST_ID_PYRO_CONT_ADC + i] = true;
  }
#endif  // HAS_DEV(PYRO_CONT_ADC)

  /* Radios */
#if HAS_DEV(RADIO_TI_433)
  for (int i = 0; i < NUM_RADIO_TI_433; i++) {
    radioTi433[i].radhspi = radioTi433Hspi[i];
    radioTi433[i].CS_port = radioTi433CsGpioPort[i];
    radioTi433[i].CS_pin = radioTi433CsPin[i];
    radioTi433[i].RST_port = radioTi433RstGpioPort[i];
    radioTi433[i].RST_pin = radioTi433RstPin[i];
    radioTi433[i].MISO_port = radioTi433MisoGpioPort[i];
    radioTi433[i].MISO_pin = radioTi433MisoPin[i];
    radioTi433[i].GP0_port = radioTi433Gp0GpioPort[i];
    radioTi433[i].GP0_pin = radioTi433Gp0Pin[i];
    radioTi433[i].GP2_port = radioTi433Gp2GpioPort[i];
    radioTi433[i].GP2_pin = radioTi433Gp2Pin[i];
    radioTi433[i].GP3_port = radioTi433Gp3GpioPort[i];
    radioTi433[i].GP3_pin = radioTi433Gp3Pin[i];
    radioTi433[i].payloadSize = sizeof(RadioPacket_s);
    radioTi433[i].id = 0;
    radioTi433[i].packetCfg = TIRADIO_PKTLEN_FIXED;
    radioTi433[i].initialized = false;

    // All 433 chips do NOT have a 1190 -- how can they?
    radioTi433[i].has_cc1190 = false;

#if RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200
    radioTi433[i].settingsPtr = cc1200_433_1_2kbps_cfg;
    radioTi433[i].settingsSize = cc1200_433_1_2kbps_size;
#endif  // RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200

#if RADIO_TI_TYPE == RADIO_TI_TYPE_CC1120
    radioTi433[i].settingsPtr = cc1120_433_1_2kbps_cfg;
    radioTi433[i].settingsSize = sizeof(cc1120_433_1_2kbps_cfg);
#endif  // RADIO_TI_TYPE == RADIO_TI_TYPE_CC1120

    // Enable our radio and configure pins
    hardwareStatusRadio[FIRST_ID_RADIO_TI_433 + i] =
        tiRadio_init(&radioTi433[i]);
  }
#endif  // HAS_DEV(RADIO_TI_433)

#if HAS_DEV(RADIO_TI_915)
  for (int i = 0; i < NUM_RADIO_TI_915; i++) {
    radioTi915[i].radhspi = radioTi915Hspi[i];
    radioTi915[i].CS_port = radioTi915CsGpioPort[i];
    radioTi915[i].CS_pin = radioTi915CsPin[i];
    radioTi915[i].RST_port = radioTi915RstGpioPort[i];
    radioTi915[i].RST_pin = radioTi915RstPin[i];
    radioTi915[i].MISO_port = radioTi915MisoGpioPort[i];
    radioTi915[i].MISO_pin = radioTi915MisoPin[i];
    radioTi915[i].GP0_port = radioTi915Gp0GpioPort[i];
    radioTi915[i].GP0_pin = radioTi915Gp0Pin[i];
    radioTi915[i].GP2_port = radioTi915Gp2GpioPort[i];
    radioTi915[i].GP2_pin = radioTi915Gp2Pin[i];
    radioTi915[i].GP3_port = radioTi915Gp3GpioPort[i];
    radioTi915[i].GP3_pin = radioTi915Gp3Pin[i];
    radioTi915[i].payloadSize = sizeof(RadioPacket_s);
    radioTi915[i].id = 1;
    radioTi915[i].packetCfg = TIRADIO_PKTLEN_FIXED;
    radioTi915[i].initialized = false;

#if RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200
    radioTi915[i].has_cc1190 = true;

    radioTi915[i].settingsPtr = cc1200_916_1_2kbps_cfg;
    radioTi915[i].settingsSize = sizeof(cc1200_916_1_2kbps_cfg);
#endif  // RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200

    // Enable our radio and configure pins
    hardwareStatusRadio[FIRST_ID_RADIO_TI_915 + i] =
        tiRadio_init(&radioTi915[i]);

#if (RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200)
    // PA/LNA control pins. TODO this seems somewhat code-smell-y since we
    // have CC1200 registers in hardware manager?

    // Both registers need to be inverted since the signal is active low. This
    // is fine since we never go into sleep state anyways

    // IO0 is PA_EN, so should be high in TX
    tiRadio_configGpio(&radioTi915[i], TIRADIO_IOCFG0, TIRADIO_nPA_PD, true);
    // IO2 is LNA_EN, so high in RX
    tiRadio_configGpio(&radioTi915[i], TIRADIO_IOCFG2, TIRADIO_nLNA_PD, true);

    // Enable HGM on CC1200s TODO: Make function to enable HGM in radio
    HAL_GPIO_WritePin(radioTi915HgmGpioPort[i], radioTi915HgmPin[i],
                      GPIO_PIN_SET);
#endif  // RADIO_TI_TYPE == RADIO_TI_TYPE_CC1200
  }
#endif  // HAS_DEV(RADIO_TI_915)

  /* Servos */
#if HAS_DEV(SERVO_PWM)
  for (int i = 0; i < NUM_SERVO_PWM; i++) {
    hardwareStatusServo[FIRST_ID_SERVO_PWM + i] =
        servoPwm_init(&servoPwm[i], servoPwmHtim[i], servoPwmChannel[i], 20,
                      servoPwmMinPulseMs[i], servoPwmMaxPulseMs[i], -90, 90);
  }
#endif  // HAS_DEV(SERVO_PWM)

  /* USB */
#if HAS_DEV(USB_STD)
  usbStd_init();
  hardwareStatusUsb[FIRST_ID_USB_STD] = true;
#endif  // HAS_DEV(USB_STD)

  /* VBat Sensors */
#if HAS_DEV(VBAT_ADC)
  // Battery voltage - 0 min, seems like 10v in = 2.4v on the voltage divider?
  float vbatMax = 67;  // 4.72 Volts/volt, 67v fullscale??
  // Also the scale seems non linear: at 10vin this is right, but at 13vin it
  // reads 0.25 above the true number. Apparently this is coz our ADCs aren't
  // buffered
  // TODO why does 67 make things work?
  for (int i = 0; i < NUM_VBAT_ADC; i++) {
    adcDev_init(&vbatAdc[i], vbatAdcHadc[i], vbatAdcRank[i], 0, vbatMax, true);
    adcDev_init(&vbatAdcCurrent[i], vbatAdcCurrentHadc[i],
                vbatAdcCurrentRank[i], -12.5, 17.5, true);
    hardwareStatusVbat[FIRST_ID_VBAT_ADC + i] = true;
    hardwareStatusVbat[FIRST_ID_VBAT_ADC + i] = true;
  }
#endif  // HAS_DEV(VBAT_ADC)
#if HAS_DEV(VBAT_INA226)
  for (int i = 0; i < NUM_VBAT_INA226; i++) {
    vbatIna226[i].hi2c = vbatIna226Hi2c[i];
    vbatIna226[i].addr = 0x40;  // (01000000b)
    vbatIna226[i].rShuntVal = 0.002;
    vbatIna226[i].iMaxExpected = 10;
    hardwareStatusVbat[FIRST_ID_VBAT_INA226 + i] =
        vbatIna226_init(&vbatIna226[i]);
  }
#endif  // HAS_DEV(VBAT_INA226)
}

void hm_ledToggle(int ledId) {
#if HAS_DEV(LED_DIGITAL)
  if (IS_DEVICE(ledId, LED_DIGITAL)) {
    led_toggle(&ledDigital[ledId - FIRST_ID_LED_DIGITAL]);
  }
#endif  // HAS_DEV(LED_DIGITAL)
}

bool hm_radioSend(int radioNum, uint8_t *data, uint16_t numBytes) {
#if HAS_DEV(RADIO_TI_433)
  if (IS_DEVICE(radioNum, RADIO_TI_433)) {
    TiRadioCtrl_s *pRadio = &radioTi433[radioNum - FIRST_ID_RADIO_TI_433];
    return tiRadio_addTxPacket(pRadio, data, pRadio->payloadSize);
  }
#endif  // HAS_DEV(RADIO_TI_433)

#if HAS_DEV(RADIO_TI_915)
  if (IS_DEVICE(radioNum, RADIO_TI_915)) {
    TiRadioCtrl_s *pRadio = &radioTi915[radioNum - FIRST_ID_RADIO_TI_915];
    return tiRadio_addTxPacket(pRadio, data, pRadio->payloadSize);
  }
#endif  // HAS_DEV(RADIO_TI_915)

  return false;
}

void hm_radioUpdate() {
#if HAS_DEV(RADIO_TI_433)
  for (int i = 0; i < NUM_RADIO_TI_433; i++) {
    tiRadio_update(&radioTi433[i]);
  }
#endif  // HAS_DEV(RADIO_TI_433)

#if HAS_DEV(RADIO_TI_915)
  for (int i = 0; i < NUM_RADIO_TI_915; i++) {
    tiRadio_update(&radioTi915[i]);
  }
#endif  // HAS_DEV(RADIO_TI_915)
}

void hm_readSensorData() {
  if (!inSim) {
    // Accelerometer data
#if HAS_DEV(ACCEL_H3LIS331DL)
    for (int i = 0; i < NUM_ACCEL_H3LIS331DL; i++) {
      accelH3lis331dl_getData(&accelH3lis331dl[i]);
      sensorData.accelData[i + FIRST_ID_ACCEL_H3LIS331DL] =
          accelH3lis331dl[i].val;
    }
#endif  // HAS_DEV(ACCEL_H3LIS331DL)

    // Barometer data
#if HAS_DEV(BAROMETER_MS5607)
    bool allBaroComplete = false;
    bool baroComplete[NUM_BAROMETER_MS5607] = {false};
    while (!allBaroComplete) {
      allBaroComplete = true;
      for (int i = 0; i < NUM_BAROMETER_MS5607; i++) {
        if (!baroComplete[i]) {
          allBaroComplete = false;
          baroComplete[i] = barometerMs5607_getData(&barometerMs5607[i]);
          sensorData.barometerData[i + FIRST_ID_BAROMETER_MS5607] =
              barometerMs5607[i].data;
        }
      }
    }
#endif  // HAS_DEV(BAROMETER_MS5607)

    // GPS data
#if HAS_DEV(GPS_STD) || HAS_DEV(GPS_UBLOX)
    // TODO: Poll GPS status to determine if data is good
    for (int i = 0; i < NUM_GPS_STD + NUM_GPS_UBLOX; i++) {
      gps_newData(&gps[i]);
      sensorData.gpsData[i + FIRST_ID_GPS_STD] = gps[i].data;
    }
#endif  // HAS_DEV(GPS_STD) || HAS_DEV(GPS_UBLOX)

    // IMU data
#if HAS_DEV(IMU_LSM9DS1)
    for (int i = 0; i < NUM_IMU_LSM9DS1; i++) {
      lsm9ds1_getData(&imuLsm9ds1[i]);
      sensorData.imuData[FIRST_ID_IMU_LSM9DS1 + i] = imuLsm9ds1[i].data;
    }
#endif  // HAS_DEV(IMU_LSM9DS1)

    // Pyro continuity data
#if HAS_DEV(PYRO_CONT_ADC)
    for (int i = 0; i < NUM_PYRO_CONT_ADC; i++) {
      float adcVal = 0;
      adcDev_startSingleRead(&pyroContAdc[i]);
      sensorData.pyroContData[i] = adcDev_getValue(&pyroContAdc[i], &adcVal, 5)
                                       ? adcVal > PYRO_CONTINUITY_THRESHOLD
                                       : false;
    }
#endif  // HAS_DEV(PYRO_CONT_ADC)

    // VBat data
#if HAS_DEV(VBAT_ADC)
    for (int i = 0; i < NUM_VBAT_ADC; i++) {
      float adcVal = 0;
      adcDev_startSingleRead(&vbatAdc[i]);
      sensorData.vbatData[FIRST_ID_VBAT_ADC + i] =
          adcDev_getValue(&vbatAdc[i], &adcVal, 5) ? adcVal : 0;
    }
#endif  // HAS_DEV(VBAT_ADC)
#if HAS_DEV(VBAT_INA226)
    for (int i = 0; i < NUM_VBAT_INA226; i++) {
      sensorData.vbatData[FIRST_ID_VBAT_INA226 + i] =
          vbatIna226_readBusVoltage(&vbatIna226[i]);
    }
#endif  // HAS_DEV(VBAT_INA226)

    // Timestamp data
    // TODO: Make sensor data timestamp get time from PPS-updated timer
    sensorData.timestampMs = hm_millis();
  } else {
    // Simming
    hm_simReadSensorData();
  }
}
